SDKs/apicurio.local/registry/2.1.0-SNAPSHOT/python/README.md
# openapi

<!-- Start SDK Installation -->
## SDK Installation

```bash
pip install openapi
```
<!-- End SDK Installation -->

## SDK Example Usage
<!-- Start SDK Example Usage -->
```python
import sdk
from sdk.models import operations, shared

s = sdk.SDK()
    
req = operations.CreateGlobalRuleRequest(
    request=shared.Rule(
        config="magnam",
        type="VALIDITY",
    ),
)
    
res = s.admin.create_global_rule(req)

if res.status_code == 200:
    # handle response
```
<!-- End SDK Example Usage -->

<!-- Start SDK Available Operations -->
## SDK Available Operations

### Admin

* `create_global_rule` - Create global rule
* `create_role_mapping` - Create a new role mapping
* `delete_all_global_rules` - Delete all global rules
* `delete_global_rule` - Delete global rule
* `delete_role_mapping` - Delete a role mapping
* `export_data` - Export registry data
* `get_global_rule_config` - Get global rule configuration
* `get_log_configuration` - Get a single logger configuration
* `get_role_mapping` - Return a single role mapping
* `import_data` - Import registry data
* `list_global_rules` - List global rules
* `list_log_configurations` - List logging configurations
* `list_role_mappings` - List all role mappings
* `remove_log_configuration` - Removes logger configuration
* `set_log_configuration` - Set a logger's configuration
* `update_global_rule_config` - Update global rule configuration
* `update_role_mapping` - Update a role mapping

### Artifact rules

* `create_artifact_rule` - Create artifact rule
* `delete_artifact_rule` - Delete artifact rule
* `delete_artifact_rules` - Delete artifact rules
* `get_artifact_rule_config` - Get artifact rule configuration
* `list_artifact_rules` - List artifact rules
* `test_update_artifact` - Test update artifact
* `update_artifact_rule_config` - Update artifact rule configuration

### Artifacts

* `create_artifact` - Create artifact
* `delete_artifact` - Delete artifact
* `delete_artifacts_in_group` - Deletes all artifacts in a group
* `get_content_by_global_id` - Get artifact by global ID
* `get_content_by_hash` - Get artifact content by SHA-256 hash
* `get_content_by_id` - Get artifact content by ID
* `get_latest_artifact` - Get latest artifact
* `list_artifacts_in_group` - List artifacts in group
* `search_artifacts` - Search for artifacts
* `search_artifacts_by_content` - Search for artifacts by content
* `update_artifact` - Update artifact
* `update_artifact_state` - Update artifact state

### Global rules

* `create_global_rule` - Create global rule
* `delete_all_global_rules` - Delete all global rules
* `delete_global_rule` - Delete global rule
* `get_global_rule_config` - Get global rule configuration
* `list_global_rules` - List global rules
* `update_global_rule_config` - Update global rule configuration

### Metadata

* `delete_artifact_version_meta_data` - Delete artifact version metadata
* `get_artifact_meta_data` - Get artifact metadata
* `get_artifact_version_meta_data` - Get artifact version metadata
* `get_artifact_version_meta_data_by_content` - Get artifact version metadata by content
* `update_artifact_meta_data` - Update artifact metadata
* `update_artifact_version_meta_data` - Update artifact version metadata

### Search

* `search_artifacts` - Search for artifacts
* `search_artifacts_by_content` - Search for artifacts by content

### System

* `get_system_info` - Get system information

### Users

* `get_current_user_info` - Get current user

### Versions

* `create_artifact_version` - Create artifact version
* `get_artifact_version` - Get artifact version
* `list_artifact_versions` - List artifact versions
* `update_artifact_version_state` - Update artifact version state

<!-- End SDK Available Operations -->

### SDK Generated by [Speakeasy](https://docs.speakeasyapi.dev/docs/using-speakeasy/client-sdks)
