SDKs/apicurio.local/registry/2.4.x/python/README.md
# openapi

<!-- Start SDK Installation -->
## SDK Installation

```bash
pip install git+https://github.com/speakeasy-api/openapi-directory.git#subdirectory=SDKs/apicurio.local/registry/2.4.x/python
```
<!-- End SDK Installation -->

## SDK Example Usage
<!-- Start SDK Example Usage -->
```python
import sdk
from sdk.models import operations, shared

s = sdk.SDK()


req = shared.Rule(
    config="corrupti",
    type="VALIDITY",
)
    
res = s.admin.create_global_rule(req)

if res.status_code == 200:
    # handle response
```
<!-- End SDK Example Usage -->

<!-- Start SDK Available Operations -->
## Available Resources and Operations


### admin

* `create_global_rule` - Create global rule
* `create_role_mapping` - Create a new role mapping
* `delete_all_global_rules` - Delete all global rules
* `delete_global_rule` - Delete global rule
* `delete_role_mapping` - Delete a role mapping
* `export_data` - Export registry data
* `get_config_property` - Get configuration property value
* `get_global_rule_config` - Get global rule configuration
* `get_log_configuration` - Get a single logger configuration
* `get_role_mapping` - Return a single role mapping
* `import_data` - Import registry data
* `list_artifact_types` - List artifact types
* `list_config_properties` - List all configuration properties
* `list_global_rules` - List global rules
* `list_log_configurations` - List logging configurations
* `list_role_mappings` - List all role mappings
* `remove_log_configuration` - Removes logger configuration
* `reset_config_property` - Reset a configuration property
* `set_log_configuration` - Set a logger's configuration
* `update_config_property` - Update a configuration property
* `update_global_rule_config` - Update global rule configuration
* `update_role_mapping` - Update a role mapping

### artifact_type

* `list_artifact_types` - List artifact types

### artifact_rules

* `create_artifact_rule` - Create artifact rule
* `delete_artifact_rule` - Delete artifact rule
* `delete_artifact_rules` - Delete artifact rules
* `get_artifact_rule_config` - Get artifact rule configuration
* `list_artifact_rules` - List artifact rules
* `test_update_artifact` - Test update artifact
* `update_artifact_rule_config` - Update artifact rule configuration

### artifacts

* `create_artifact_json` - Create artifact
* `create_artifact_raw` - Create artifact
* `delete_artifact` - Delete artifact
* `delete_artifacts_in_group` - Delete artifacts in group
* `get_content_by_global_id` - Get artifact by global ID
* `get_content_by_hash` - Get artifact content by SHA-256 hash
* `get_content_by_id` - Get artifact content by ID
* `get_latest_artifact` - Get latest artifact
* `list_artifacts_in_group` - List artifacts in group
* `references_by_content_hash` - List artifact references by hash
* `references_by_content_id` - List artifact references by content ID
* `references_by_global_id` - List artifact references by global ID
* `search_artifacts` - Search for artifacts
* `search_artifacts_by_content` - Search for artifacts by content
* `update_artifact_state` - Update artifact state
* `update_artifact_json` - Update artifact
* `update_artifact_raw` - Update artifact

### global_rules

* `create_global_rule` - Create global rule
* `delete_all_global_rules` - Delete all global rules
* `delete_global_rule` - Delete global rule
* `get_global_rule_config` - Get global rule configuration
* `list_global_rules` - List global rules
* `update_global_rule_config` - Update global rule configuration

### groups

* `create_group` - Create a new group
* `delete_group_by_id` - Delete a group by the specified ID.
* `get_group_by_id` - Get a group by the specified ID.
* `list_groups` - List groups

### metadata

* `delete_artifact_version_meta_data` - Delete artifact version metadata
* `get_artifact_meta_data` - Get artifact metadata
* `get_artifact_owner` - Get artifact owner
* `get_artifact_version_meta_data` - Get artifact version metadata
* `get_artifact_version_meta_data_by_content` - Get artifact version metadata by content
* `update_artifact_meta_data` - Update artifact metadata
* `update_artifact_owner` - Update artifact owner
* `update_artifact_version_meta_data` - Update artifact version metadata

### search

* `search_artifacts` - Search for artifacts
* `search_artifacts_by_content` - Search for artifacts by content

### system

* `get_resource_limits` - Get resource limits information
* `get_system_info` - Get system information

### users

* `get_current_user_info` - Get current user

### versions

* `create_artifact_version_json` - Create artifact version
* `create_artifact_version_raw` - Create artifact version
* `get_artifact_version` - Get artifact version
* `get_artifact_version_references` - Get artifact version
* `list_artifact_versions` - List artifact versions
* `update_artifact_version_state` - Update artifact version state
<!-- End SDK Available Operations -->

### Maturity

This SDK is in beta, and there may be breaking changes between versions without a major version update. Therefore, we recommend pinning usage
to a specific package version. This way, you can install the same version each time without breaking changes unless you are intentionally
looking for the latest version.

### Contributions

While we value open-source contributions to this SDK, this library is generated programmatically.
Feel free to open a PR or a Github issue as a proof of concept and we'll do our best to include it in a future release !

### SDK Created by [Speakeasy](https://docs.speakeasyapi.dev/docs/using-speakeasy/client-sdks)
